# rust-spin-libsql-api

./: .env.sample  .gitignore  .justfile  Cargo.toml  Dockerfile  README.md  docker-compose.yml  spin.toml
src/: lib.rs
